check_out.txt
    Checking lectern v0.1.0 (/var/home/rob/Documents/Projects/lectern)
error[E0412]: cannot find type `ChapterRegion` in this scope
   --> src/ui/mod.rs:125:26
    |
125 |     ChapterRegionChanged(ChapterRegion),
    |                          ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this enum through its public re-export
    |
8   + use crate::ui::state::ChapterRegion;
    |

For more information about this error, try `rustc --explain E0412`.
error: could not compile `lectern` (bin "lectern") due to 1 previous error
